# pymidantic

./: README.md  pyproject.toml
.github/workflows/: lint.yml  lintandtest.yml  publish.yml
pymidantic/: __init__.py  migratable.py
tests/: test_migrate.py
